src/snapshots/cronexpr__parser__tests__parse_crontab_failed-41.snap
---
source: src/parser.rs
expression: "parse_crontab(\"060 * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
060 * * * * UTC
^ value must be in range 0..=59; found 60
