src/snapshots/cronexpr__parser__tests__parse_crontab_success-22.snap
---
source: src/parser.rs
expression: "parse_crontab(\"00 04 01 Jan-Mar/02 Mon-Fri UTC\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            0,
        },
    },
    hours: PossibleLiterals {
        values: {
            4,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
            3,
        },
    },
    days_of_month: ParsedDaysOfMonth {
        literals: {
            1,
        },
        last_day_of_month: false,
        nearest_weekdays: {},
        start_with_asterisk: false,
    },
    days_of_week: ParsedDaysOfWeek {
        literals: {
            1,
            2,
            3,
            4,
            5,
        },
        last_days_of_week: {},
        nth_days_of_week: {},
        start_with_asterisk: false,
    },
    timezone: TimeZone(
        UTC,
    ),
}
